python_variable_sender/iec61131parser/IEC61131Parser.py
# Generated from IEC61131.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class IEC61131Parser ( Parser ):

    grammarFileName = "IEC61131.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'VAR_GLOBAL'", "'END_VAR'", "'VAR'", 
                     "'VAR_INPUT'", "'VAR_OUTPUT'", "'VAR_INPUT_OUTPUT'", 
                     "'VAR_TEMP'", "'ARRAY'", "'['", "','", "']'", "'OF'", 
                     "'..'", "'POINTER'", "'TO'", "':'", "':='", "';'", 
                     "'TRUE'", "'FALSE'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Binary_literal", "Octal_literal", 
                      "Decimal_literal", "Pure_decimal_digits", "Hexadecimal_literal", 
                      "Floating_point_literal", "Static_string_literal", 
                      "ID", "WS", "Block_comment", "Attribute", "Line_comment" ]

    RULE_var_block_global = 0
    RULE_var_block = 1
    RULE_type_rule = 2
    RULE_array_type = 3
    RULE_range_decl = 4
    RULE_pointer_type = 5
    RULE_variable_declaration = 6
    RULE_variable_initializer = 7
    RULE_literal = 8
    RULE_boolean_literal = 9
    RULE_numeric_literal = 10
    RULE_integer_literal = 11
    RULE_string_literal = 12

    ruleNames =  [ "var_block_global", "var_block", "type_rule", "array_type", 
                   "range_decl", "pointer_type", "variable_declaration", 
                   "variable_initializer", "literal", "boolean_literal", 
                   "numeric_literal", "integer_literal", "string_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    Binary_literal=22
    Octal_literal=23
    Decimal_literal=24
    Pure_decimal_digits=25
    Hexadecimal_literal=26
    Floating_point_literal=27
    Static_string_literal=28
    ID=29
    WS=30
    Block_comment=31
    Attribute=32
    Line_comment=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Var_block_globalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._variable_declaration = None # Variable_declarationContext
            self.variables = list() # of Variable_declarationContexts

        def variable_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IEC61131Parser.Variable_declarationContext)
            else:
                return self.getTypedRuleContext(IEC61131Parser.Variable_declarationContext,i)


        def getRuleIndex(self):
            return IEC61131Parser.RULE_var_block_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_block_global" ):
                listener.enterVar_block_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_block_global" ):
                listener.exitVar_block_global(self)




    def var_block_global(self):

        localctx = IEC61131Parser.Var_block_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_var_block_global)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(IEC61131Parser.T__0)

            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IEC61131Parser.ID:
                self.state = 27
                localctx._variable_declaration = self.variable_declaration()
                localctx.variables.append(localctx._variable_declaration)
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 33
            self.match(IEC61131Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.input = None
            self.output = None
            self.temp = None
            self._variable_declaration = None # Variable_declarationContext
            self.variables = list() # of Variable_declarationContexts

        def variable_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IEC61131Parser.Variable_declarationContext)
            else:
                return self.getTypedRuleContext(IEC61131Parser.Variable_declarationContext,i)


        def getRuleIndex(self):
            return IEC61131Parser.RULE_var_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_block" ):
                listener.enterVar_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_block" ):
                listener.exitVar_block(self)




    def var_block(self):

        localctx = IEC61131Parser.Var_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [IEC61131Parser.T__2]:
                self.state = 35
                self.match(IEC61131Parser.T__2)
                pass
            elif token in [IEC61131Parser.T__3]:
                localctx.input = true
                self.state = 37
                self.match(IEC61131Parser.T__3)
                pass
            elif token in [IEC61131Parser.T__4]:
                localctx.output = true
                self.state = 39
                self.match(IEC61131Parser.T__4)
                pass
            elif token in [IEC61131Parser.T__5]:
                localctx.input = localctx.output=true
                self.state = 41
                self.match(IEC61131Parser.T__5)
                pass
            elif token in [IEC61131Parser.T__6]:
                localctx.temp = true
                self.state = 43
                self.match(IEC61131Parser.T__6)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IEC61131Parser.ID:
                self.state = 46
                localctx._variable_declaration = self.variable_declaration()
                localctx.variables.append(localctx._variable_declaration)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(IEC61131Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IEC61131Parser.RULE_type_rule

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SimpleTypeContext(Type_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IEC61131Parser.Type_ruleContext
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(IEC61131Parser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleType" ):
                listener.enterSimpleType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleType" ):
                listener.exitSimpleType(self)


    class ArrayTypeContext(Type_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IEC61131Parser.Type_ruleContext
            super().__init__(parser)
            self.array = None # Array_typeContext
            self.copyFrom(ctx)

        def array_type(self):
            return self.getTypedRuleContext(IEC61131Parser.Array_typeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayType" ):
                listener.enterArrayType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayType" ):
                listener.exitArrayType(self)


    class PointerTypeContext(Type_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IEC61131Parser.Type_ruleContext
            super().__init__(parser)
            self.pointer = None # Pointer_typeContext
            self.copyFrom(ctx)

        def pointer_type(self):
            return self.getTypedRuleContext(IEC61131Parser.Pointer_typeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPointerType" ):
                listener.enterPointerType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPointerType" ):
                listener.exitPointerType(self)



    def type_rule(self):

        localctx = IEC61131Parser.Type_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type_rule)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [IEC61131Parser.ID]:
                localctx = IEC61131Parser.SimpleTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                localctx.name = self.match(IEC61131Parser.ID)
                pass
            elif token in [IEC61131Parser.T__7]:
                localctx = IEC61131Parser.ArrayTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                localctx.array = self.array_type()
                pass
            elif token in [IEC61131Parser.T__13]:
                localctx = IEC61131Parser.PointerTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                localctx.pointer = self.pointer_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._range_decl = None # Range_declContext
            self.ranges = list() # of Range_declContexts
            self.type_decl = None # Type_ruleContext

        def range_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IEC61131Parser.Range_declContext)
            else:
                return self.getTypedRuleContext(IEC61131Parser.Range_declContext,i)


        def type_rule(self):
            return self.getTypedRuleContext(IEC61131Parser.Type_ruleContext,0)


        def getRuleIndex(self):
            return IEC61131Parser.RULE_array_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_type" ):
                listener.enterArray_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_type" ):
                listener.exitArray_type(self)




    def array_type(self):

        localctx = IEC61131Parser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_array_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(IEC61131Parser.T__7)
            self.state = 60
            self.match(IEC61131Parser.T__8)
            self.state = 61
            localctx._range_decl = self.range_decl()
            localctx.ranges.append(localctx._range_decl)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IEC61131Parser.T__9:
                self.state = 62
                self.match(IEC61131Parser.T__9)
                self.state = 63
                localctx._range_decl = self.range_decl()
                localctx.ranges.append(localctx._range_decl)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(IEC61131Parser.T__10)
            self.state = 70
            self.match(IEC61131Parser.T__11)
            self.state = 71
            localctx.type_decl = self.type_rule()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Range_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.lbound = None # Integer_literalContext
            self.ubound = None # Integer_literalContext

        def integer_literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IEC61131Parser.Integer_literalContext)
            else:
                return self.getTypedRuleContext(IEC61131Parser.Integer_literalContext,i)


        def getRuleIndex(self):
            return IEC61131Parser.RULE_range_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange_decl" ):
                listener.enterRange_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange_decl" ):
                listener.exitRange_decl(self)




    def range_decl(self):

        localctx = IEC61131Parser.Range_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_range_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            localctx.lbound = self.integer_literal()
            self.state = 74
            self.match(IEC61131Parser.T__12)
            self.state = 75
            localctx.ubound = self.integer_literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pointer_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_decl = None # Type_ruleContext

        def type_rule(self):
            return self.getTypedRuleContext(IEC61131Parser.Type_ruleContext,0)


        def getRuleIndex(self):
            return IEC61131Parser.RULE_pointer_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPointer_type" ):
                listener.enterPointer_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPointer_type" ):
                listener.exitPointer_type(self)




    def pointer_type(self):

        localctx = IEC61131Parser.Pointer_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_pointer_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(IEC61131Parser.T__13)
            self.state = 78
            self.match(IEC61131Parser.T__14)
            self.state = 79
            localctx.type_decl = self.type_rule()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token
            self.names = list() # of Tokens
            self.type_decl = None # Type_ruleContext
            self.initializer = None # Variable_initializerContext

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(IEC61131Parser.ID)
            else:
                return self.getToken(IEC61131Parser.ID, i)

        def type_rule(self):
            return self.getTypedRuleContext(IEC61131Parser.Type_ruleContext,0)


        def variable_initializer(self):
            return self.getTypedRuleContext(IEC61131Parser.Variable_initializerContext,0)


        def getRuleIndex(self):
            return IEC61131Parser.RULE_variable_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_declaration" ):
                listener.enterVariable_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_declaration" ):
                listener.exitVariable_declaration(self)




    def variable_declaration(self):

        localctx = IEC61131Parser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            localctx._ID = self.match(IEC61131Parser.ID)
            localctx.names.append(localctx._ID)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IEC61131Parser.T__9:
                self.state = 82
                self.match(IEC61131Parser.T__9)
                self.state = 83
                localctx._ID = self.match(IEC61131Parser.ID)
                localctx.names.append(localctx._ID)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(IEC61131Parser.T__15)
            self.state = 90
            localctx.type_decl = self.type_rule()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IEC61131Parser.T__16:
                self.state = 91
                self.match(IEC61131Parser.T__16)
                self.state = 92
                localctx.initializer = self.variable_initializer()


            self.state = 95
            self.match(IEC61131Parser.T__17)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_initializerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(IEC61131Parser.LiteralContext,0)


        def getRuleIndex(self):
            return IEC61131Parser.RULE_variable_initializer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_initializer" ):
                listener.enterVariable_initializer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_initializer" ):
                listener.exitVariable_initializer(self)




    def variable_initializer(self):

        localctx = IEC61131Parser.Variable_initializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variable_initializer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numeric_literal(self):
            return self.getTypedRuleContext(IEC61131Parser.Numeric_literalContext,0)


        def string_literal(self):
            return self.getTypedRuleContext(IEC61131Parser.String_literalContext,0)


        def boolean_literal(self):
            return self.getTypedRuleContext(IEC61131Parser.Boolean_literalContext,0)


        def getRuleIndex(self):
            return IEC61131Parser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = IEC61131Parser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_literal)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [IEC61131Parser.T__20, IEC61131Parser.Binary_literal, IEC61131Parser.Octal_literal, IEC61131Parser.Decimal_literal, IEC61131Parser.Pure_decimal_digits, IEC61131Parser.Hexadecimal_literal, IEC61131Parser.Floating_point_literal]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.numeric_literal()
                pass
            elif token in [IEC61131Parser.Static_string_literal]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.string_literal()
                pass
            elif token in [IEC61131Parser.T__18, IEC61131Parser.T__19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.boolean_literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Boolean_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IEC61131Parser.RULE_boolean_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean_literal" ):
                listener.enterBoolean_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean_literal" ):
                listener.exitBoolean_literal(self)




    def boolean_literal(self):

        localctx = IEC61131Parser.Boolean_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_boolean_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            _la = self._input.LA(1)
            if not(_la==IEC61131Parser.T__18 or _la==IEC61131Parser.T__19):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Numeric_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integer_literal(self):
            return self.getTypedRuleContext(IEC61131Parser.Integer_literalContext,0)


        def Floating_point_literal(self):
            return self.getToken(IEC61131Parser.Floating_point_literal, 0)

        def getRuleIndex(self):
            return IEC61131Parser.RULE_numeric_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumeric_literal" ):
                listener.enterNumeric_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumeric_literal" ):
                listener.exitNumeric_literal(self)




    def numeric_literal(self):

        localctx = IEC61131Parser.Numeric_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_numeric_literal)
        self._la = 0 # Token type
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==IEC61131Parser.T__20:
                    self.state = 106
                    self.match(IEC61131Parser.T__20)


                self.state = 109
                self.integer_literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==IEC61131Parser.T__20:
                    self.state = 110
                    self.match(IEC61131Parser.T__20)


                self.state = 113
                self.match(IEC61131Parser.Floating_point_literal)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Integer_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Binary_literal(self):
            return self.getToken(IEC61131Parser.Binary_literal, 0)

        def Octal_literal(self):
            return self.getToken(IEC61131Parser.Octal_literal, 0)

        def Decimal_literal(self):
            return self.getToken(IEC61131Parser.Decimal_literal, 0)

        def Pure_decimal_digits(self):
            return self.getToken(IEC61131Parser.Pure_decimal_digits, 0)

        def Hexadecimal_literal(self):
            return self.getToken(IEC61131Parser.Hexadecimal_literal, 0)

        def getRuleIndex(self):
            return IEC61131Parser.RULE_integer_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger_literal" ):
                listener.enterInteger_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger_literal" ):
                listener.exitInteger_literal(self)




    def integer_literal(self):

        localctx = IEC61131Parser.Integer_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_integer_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << IEC61131Parser.Binary_literal) | (1 << IEC61131Parser.Octal_literal) | (1 << IEC61131Parser.Decimal_literal) | (1 << IEC61131Parser.Pure_decimal_digits) | (1 << IEC61131Parser.Hexadecimal_literal))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class String_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Static_string_literal(self):
            return self.getToken(IEC61131Parser.Static_string_literal, 0)

        def getRuleIndex(self):
            return IEC61131Parser.RULE_string_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString_literal" ):
                listener.enterString_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString_literal" ):
                listener.exitString_literal(self)




    def string_literal(self):

        localctx = IEC61131Parser.String_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_string_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(IEC61131Parser.Static_string_literal)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





